# libmeritminer

./: CMakeLists.txt  README.md
include/: README.md
include/merit/: miner.hpp
include/merit/crypto/: siphash.h
include/merit/cuckoo/: mean_cuckoo.h
include/merit/merkle/: merkle.h  merkle.hpp
include/merit/miner/: miner.hpp
include/merit/nvml/: nvml.h
include/merit/stratum/: stratum.hpp
include/merit/util/: util.hpp  work.hpp
src/: README.md  miner.cpp  minerd.cpp  public.cpp  test.cpp
src/blake2/: README.md  blake2b-ref.c
src/crypto/: README.md  siphash.h
src/cuckoo/: README.md  mean_cuckoo.cpp  mean_cuckoo.h  miner.cpp  miner.h
src/cuckoo/gpu/: exceptions.h  kernel.cu
src/merkle/: README.md  merkle.cpp
src/miner/: README.md  miner.cpp  miner.hpp
src/nvml/: README.md  nvml.cpp
src/stratum/: README.md  stratum.cpp  stratum.hpp
src/util/: README.md  util.cpp  util.hpp  work.hpp
